# MaiRs

general_time_event_driven/src/: main.rs  worker_pool.rs
rust_mai/: Cargo.toml
rust_mai/assets/2310219 sasakure.UK - the EmpErroR [no video]/: sasakure.UK - the EmpErroR (FanIsAnIdiot) [ADVANCED].osu  sasakure.UK - the EmpErroR (FanIsAnIdiot) [BASIC].osu  sasakure.UK - the EmpErroR (FanIsAnIdiot) [EASY].osu  sasakure.UK - the EmpErroR (FanIsAnIdiot) [EXPERT].osu  sasakure.UK - the EmpErroR (FanIsAnIdiot) [MASTER].osu  sasakure.UK - the EmpErroR (FanIsAnIdiot) [ReMASTER].osu
rust_mai/src/: clk.rs  dev_read.rs  lib.rs  main.rs  parser.rs  sliding_window.rs  types.rs  widget_for_display_queue.rs
